--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "the-dark-side-server-a",
-  "version": "0.0.1",
+  "version": "0.1.2",
   "description": "Server",
   "main": "server.js",
   "scripts": {
@@ -22,6 +22,7 @@
   "packageManager": "yarn@4.12.0",
   "dependencies": {
     "express": "^5.2.1",
+    "rethinkdb": "^2.4.2",
     "socket.io": "^4.8.3"
   }
 }
